k8s/tests/alb/app_nginx_service_alb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test-ingress-alb
  annotations:
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: nginx
~
